[Arjun] Add:completed with Api Test Cases
