# notesBackend/swagger.json
@@ -3,33 +3,45 @@
     "info": {
         "version": "1.0.0",
         "title": "Fundoo Note",
-        "description": "This Application Used to keep your notes",
+        "description": "Google Keep Clone",
         "license": {
             "name": "MIT",
             "url": "https://opensource.org/licenses/MIT"
         }
     },
     "host": "localhost:3000",
-    "basePath": "/user",
-    "tags": [{
-        "name": "Users",
-        "description": "User Form for FUNDOO NOTE"
-    }],
+    "basePath": "/",
+
+
     "schemes": [
         "http",
         "https"
     ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
+    "securityDefinitions": {
+        "token": {
+            "type": "apiKey",
+            "name": "token",
+            "in": "params",
+            "description": "authorised token "
+        }
+    },
+    "security": [{
+        "token": []
+    }],
     "paths": {
-        "/registration": {
+        "/user/registration": {
             "post": {
                 "summary": "Register a new user",
                 "tags": [
-                    "Users Registration"
+                    "Users"
                 ],
                 "description": "Create a new user in system",
-                "produces": [
-                    "application/json"
-                ],
                 "parameters": [{
                     "name": "user",
                     "in": "body",
@@ -38,9 +50,15 @@
                         "$ref": "#/definitions/User"
                     }
                 }],
+                "produces": [
+                    "application/json"
+                ],
                 "responses": {
                     "200": {
-                        "description": "Registration Success"
+                        "description": "Registration Success",
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
                     },
                     "500": {
                         "description": "User Registration failed!!"
@@ -48,11 +66,11 @@
                 }
             }
         },
-        "/login": {
+        "/user/login": {
             "post": {
                 "summary": "Login user",
                 "tags": [
-                    "Users Login"
+                    "Users"
                 ],
                 "description": "Login user in Fundoo Note",
                 "parameters": [{
@@ -79,23 +97,21 @@
                 }
             }
         },
-        "/forgetpassword": {
+        "/user/forgetpassword": {
             "post": {
                 "summary": "Forgetpassword",
                 "tags": [
-                    "Users forgetpassword"
+                    "Users"
                 ],
                 "description": "Getting Link for forgetpassword",
-                "parameters": [
-                    {
-                        "name": "user",
-                        "in": "body",
-                        "description": "forgetpassword",
-                        "schema": {
-                            "$ref": "#/definitions/forgetpassword"
-                        }
+                "parameters": [{
+                    "name": "user",
+                    "in": "body",
+                    "description": "forgetpassword",
+                    "schema": {
+                        "$ref": "#/definitions/forgetpassword"
                     }
-                ],
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -112,23 +128,21 @@
                 }
             }
         },
-        "/resetPassword/:token": {
+        "/user/resetPassword/:token": {
             "post": {
                 "summary": "ResetPassword",
                 "tags": [
-                    "Users ResetPassword"
+                    "Users"
                 ],
                 "description": "ResetPassword",
-                "parameters": [
-                    {
-                        "name": "user",
-                        "in": "body",
-                        "description": "forgetpassword",
-                        "schema": {
-                            "$ref": "#/definitions/ResetPassword"
-                        }
+                "parameters": [{
+                    "name": "user",
+                    "in": "body",
+                    "description": "forgetpassword",
+                    "schema": {
+                        "$ref": "#/definitions/ResetPassword"
                     }
-                ],
+                }],
                 "produces": [
                     "application/json"
                 ],
@@ -144,6 +158,180 @@
                     }
                 }
             }
+        },
+        "/note": {
+            "post": {
+                "summary": "create new Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Create a new note in system",
+                "parameters": [{
+                    "name": "Note",
+                    "in": "body",
+                    "description": "Register a new user",
+                    "schema": {
+                        "$ref": "#/definitions/createNote"
+                    }
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note added sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/createNote"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            },
+            "get": {
+                "summary": "Getting All Notes of User",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Get Notes",
+                "parameters": [{
+                    "name": "Note",
+                    "description": "Creating Note"
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Getting All Note sucessfully"
+                    },
+                    "500": {
+                        "description": "some Error occure!!"
+                    }
+                }
+            }
+        },
+        "/note/{id}": {
+            "delete": {
+                "summary": "Delete Notes",
+                "tags": [
+                    "Notes"
+
+                ],
+                "description": "Note deleted from the system",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": "true",
+                    "description": "Note id(which is supposed to be deleted) "
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note added sucessfully"
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            },
+            "put": {
+                "summary": "Modify Notes",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Modify Note from the system",
+                "parameters": [{
+
+                        "name": "details",
+                        "in": "body",
+                        "required": "true",
+                        "description": "Data which you want to Modify ",
+                        "schema": {
+                            "$ref": "#/definitions/createNote"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": "true",
+                        "description": "Note id(which is supposed to be modified) "
+
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note added sucessfully",
+                        "schema": {
+                            "$ref": "#/definitions/createNote"
+                        }
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+
+        },
+        "/moveToArchive/{id}": {
+            "put": {
+                "summary": "Move Note to Archive",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Notes to Be ISArchived or !ISArchived",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": "true",
+                    "description": "Note id(which is supposed to be Archive) "
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note sucessfully Archived"
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+
+        },
+        "/moveToTrash/{id}": {
+            "put": {
+                "summary": "Move Note to Trash",
+                "tags": [
+                    "Notes"
+                ],
+                "description": "Notes to Be TRASH or !TRASH",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "required": "true",
+                    "description": "Note id(which is supposed to be Trash) "
+                }],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Note sucessfully Trash"
+                    },
+                    "500": {
+                        "description": "error occured!!"
+                    }
+                }
+            }
+
         }
     },
     "definitions": {
@@ -162,29 +350,39 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "Login": {
-        "properties": {
-            "email": {
-                "type": "string"
-            },
-            "password": {
-                "type": "string"
+        },
+        "Login": {
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
             }
-        }
-    },
-    "forgetpassword": {
-        "properties": {
-            "email": {
-                "type": "string"
+        },
+        "forgetpassword": {
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
             }
-        }
-    },
-    "ResetPassword":{
-        "properties":{
-            "password":{
-                "type":"string"
+        },
+        "ResetPassword": {
+            "properties": {
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "createNote": {
+            "properties": {
+                "notetitle": {
+                    "type": "string"
+                },
+                "notedata": {
+                    "type": "string"
+                }
             }
         }
     }
